--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,11 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.active {
+    p {
+        color: royalblue;
+    }
 }
